<resources>
    <string name="app_name">KLYA</string>
    <string name="Continue">Continue</string>
    <string name="accountNumber">A/c No</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">Skip</string>
    <string name="addNewPiggy">Add New KLYA</string>
    <string name="allownonSymbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="amountText">Amount :</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="availableBalance">Available Balance</string>
    <string name="balance">Balance</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="connectedOn">Connected on</string>
    <string name="connectedTo">Connected To</string>
    <string name="default_web_client_id">1033897332144-ctdch01upfa259th3pnuhlr1au43l0fb.apps.googleusercontent.com</string>
    <string name="finish">Finish</string>
    <string name="firebase_database_url">https://hdchatpay.firebaseio.com</string>
    <string name="gcm_defaultSenderId">1033897332144</string>
    <string name="goal">GOAL</string>
    <string name="goalAchieved">Goal achieved</string>
    <string name="goalAmount">Goal Amount :</string>
    <string name="goalCreatedSuccessfully">Savings Goal Created Successfully</string>
    <string name="goalDate">Goal Date :</string>
    <string name="goalDateText">Goal Date :</string>
    <string name="goalName">Goal Name :</string>
    <string name="google_api_key">AIzaSyA246m2QmzLC9L1IHGP32Ike31i1BI4QhE</string>
    <string name="google_app_id">1:1033897332144:android:490fa318b9a583b1</string>
    <string name="google_crash_reporting_api_key">AIzaSyA246m2QmzLC9L1IHGP32Ike31i1BI4QhE</string>
    <string name="google_storage_bucket">hdchatpay.appspot.com</string>
    <string name="location_services_message">Please enable Location Services and GPS</string>
    <string name="location_services_title">Location Services Not Active</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nodeviceFound">No devices found,Please try again</string>
    <string name="piggy">KLYA</string>
    <string name="piggyBalance">KLYA Balance</string>
    <string name="piggyDescription">Your KLYA device is now connected to your Mobile App. Please confirm details&amp;submit</string>
    <string name="piggyName">KLYA Name</string>
    <string name="piggyNameText">KLYA name</string>
    <string name="piggySearchingDescription">Please shake the KLYA device to connect to the app</string>
    <string name="piggySetUpDescription">Choose the account KLYA device will be linked to and update the balance</string>
    <string name="search_menu_title">Search</string>
    <string name="searchingForPiggys">"Searching for KLYA's"</string>
    <string name="searchingScreenDescription">Please shake the KLYA device to connect to the app</string>
    <string name="selectAccount">Select Account</string>
    <string name="setGoal">Set Goal</string>
    <string name="setUp">Set Up</string>
    <string name="showDevicesDescription">Please tap on KLYA device to connect</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">Submit</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="title_activity_piggy_bank_home_nav_drawer">PiggyBankHomeNavDrawer</string>
    <string name="transferGoal">Transfer</string>
    <string name="transfertoPiggyBank">Transfer To KLYA</string>
    <string name="updatePiggy">Sync KLYA</string>
    <string name="update_Piggy">Update KLYA</string>
    <string name="update_to_piggy_Bank">Update To KLYA</string>
    <string name="updated_successfully">KLYA device has been updated successfully</string>
    <string name="title_activity_navdrawer">NAVDrawer</string>

</resources>
