<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/backgroundColor" android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true">
    <RelativeLayout android:id="@+id/topLayout" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#000000" android:gravity="center" android:layout_gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Confirm" android:textAllCaps="true"/>
            <TextView android:textSize="15sp" android:textColor="#000000" android:gravity="center" android:layout_gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/piggyDescription"/>
            <ImageView android:layout_gravity="center" android:layout_width="70dp" android:layout_height="70dp" android:layout_margin="10dp" android:src="@drawable/piggy_bank"/>
            <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:background="#ffffff" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textColor="#666666" android:gravity="center" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/piggyNameText" android:layout_weight="0.6"/>
                        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_gravity="center_vertical" android:id="@+id/piggyBankName" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Piggy Bank" android:layout_weight="0.3"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:background="#eeeeee" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textColor="#666666" android:gravity="center" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/accountNumber" android:layout_weight="0.6"/>
                        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_gravity="center_vertical" android:id="@+id/linkedAccountNumber" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Piggy Bank" android:layout_weight="0.3"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:background="#ffffff" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textColor="#666666" android:gravity="center" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/balance" android:layout_weight="0.6"/>
                        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_gravity="center_vertical" android:id="@+id/balance" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Piggy Bank" android:layout_weight="0.3"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:background="#eeeeee" android:padding="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textColor="#666666" android:gravity="center" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/connectedOn" android:layout_weight="0.6"/>
                        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_gravity="center_vertical" android:id="@+id/date" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Piggy Bank" android:layout_weight="0.3"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:background="#eeeeee" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textColor="#666666" android:gravity="center" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/connectedTo" android:layout_weight="0.6"/>
                        <TextView android:textSize="18sp" android:textColor="#000000" android:layout_gravity="center_vertical" android:id="@+id/piggyDeviceName" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:layout_weight="0.3"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <RelativeLayout android:background="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="10dp" android:layout_marginBottom="20dp" android:layout_alignParentBottom="true">
            <TextView android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@+id/finish" android:background="@drawable/button_bg" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/submit" android:textAllCaps="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:id="@+id/progressBarRL" android:background="@color/progress_bar_layout_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignTop="@+id/topLayout" android:layout_alignBottom="@+id/topLayout">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge"/>
    </RelativeLayout>
</RelativeLayout>
