<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="match_parent" app:cardBackgroundColor="@color/backgroundColor">
            <LinearLayout android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="#000000" android:gravity="center" android:layout_gravity="center" android:padding="5dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Confirmation"/>
                <TextView android:textSize="@dimen/big_Text" android:textStyle="bold" android:textColor="#000000" android:gravity="center" android:layout_gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/goalCreatedSuccessfully"/>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <VideoView android:layout_gravity="center" android:id="@+id/videoView" android:layout_width="80dp" android:layout_height="80dp"/>
                    <ImageView android:layout_gravity="center" android:id="@+id/imageView" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/check_circle_green"/>
                </FrameLayout>
                <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                            <LinearLayout android:orientation="horizontal" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                                <TextView android:gravity="right" android:layout_gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/goalName" android:layout_weight="0.6"/>
                                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#000000" android:id="@+id/goal_Name_Goal_Confirmation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.4"/>
                            </LinearLayout>
                        </RelativeLayout>
                        <RelativeLayout android:background="#eeeeee" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <LinearLayout android:orientation="horizontal" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                                <TextView android:gravity="right" android:layout_gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/amountText" android:layout_weight="0.6"/>
                                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#000000" android:id="@+id/amount_Goal_Confirmation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.4"/>
                            </LinearLayout>
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                            <LinearLayout android:orientation="horizontal" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                                <TextView android:gravity="right" android:layout_gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/goalDateText" android:layout_weight="0.6"/>
                                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#000000" android:id="@+id/goal_date_Goal_Confirmation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.4"/>
                            </LinearLayout>
                        </RelativeLayout>
                        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                            <LinearLayout android:orientation="horizontal" android:padding="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                                <TextView android:gravity="right" android:layout_gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Extra To Save : " android:layout_weight="0.6"/>
                                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#000000" android:id="@+id/extra_amount_Goal_confirmation" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.4"/>
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView android:textStyle="bold" android:textColor="#ffffff" android:layout_gravity="center" android:id="@+id/updateTo_Toy_Goal_Confirmation" android:background="@drawable/click_action" android:paddingLeft="30dp" android:paddingTop="10dp" android:paddingRight="30dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/update_to_piggy_Bank" android:drawableLeft="@drawable/ic_circle_right_mark_24dp" android:drawablePadding="10dp" android:textAllCaps="false"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
